// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorToolbar file actions Gist it button should be disable without token 1`] = `
<button
  aria-expanded="true"
  aria-haspopup="true"
  class="pf-c-dropdown__toggle pf-m-plain"
  data-ouia-component-id="OUIA-Generated-DropdownToggle-4"
  data-ouia-component-type="PF4/DropdownToggle"
  data-ouia-safe="true"
  data-testid="share-menu"
  id="share-id-lg"
  type="button"
>
  <span
    class="pf-c-dropdown__toggle-text"
  >
    Share
  </span>
  <span
    class="pf-c-dropdown__toggle-icon"
  >
    <svg
      aria-hidden="true"
      fill="currentColor"
      height="1em"
      role="img"
      style="vertical-align: -0.125em;"
      viewBox="0 0 320 512"
      width="1em"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
      />
    </svg>
  </span>
</button>
`;

exports[`EditorToolbar is dirty indicator should show the Read-only indicator when readonly is true 1`] = `
<div
  class="kogito--editor__toolbar-name-container readonly"
  data-testid="toolbar-title"
>
  <h3
    aria-label="File name"
    class="pf-c-title pf-m-2xl kogito--editor__toolbar-title"
  >
    new-file
  </h3>
</div>
`;

exports[`EditorToolbar is dirty indicator should show the isDirty indicator when isEdited is true 1`] = `
<div
  class="kogito--editor__toolbar-name-container"
  data-testid="toolbar-title"
>
  <h3
    aria-label="File name"
    class="pf-c-title pf-m-2xl"
  >
    new-file
  </h3>
  <input
    aria-invalid="false"
    aria-label="Edit file name"
    class="pf-c-form-control kogito--editor__toolbar-title"
    type="text"
    value="new-file"
  />
</div>
`;

exports[`EditorToolbar is dirty indicator shouldn't show the isDirty indicator when isEdited is false 1`] = `
<div
  class="kogito--editor__toolbar-name-container"
  data-testid="toolbar-title"
>
  <h3
    aria-label="File name"
    class="pf-c-title pf-m-2xl"
  >
    new-file
  </h3>
  <input
    aria-invalid="false"
    aria-label="Edit file name"
    class="pf-c-form-control kogito--editor__toolbar-title"
    type="text"
    value="new-file"
  />
</div>
`;
